--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="app">
     <head>
-        <title>6 melhores noticias sobre COVID-19</title>
+        <title>Feito para Rayanne!</title>
         <link rel="stylesheet" href="main.css"/>
     </head>
     <body class="main">
